media/css/privacy/privacy-day.less
/* ... */
html[lang^='en'] #tips-nav-direct li a span:after {
    content: '.';
}


#tips-wrapper {
    padding-top: @baseLine*3;
}

.tip {
    position: relative;
    z-index: 1;
    margin-bottom: @baseLine * 2;
    color: @textColorSecondary;

    .clearfix();

    .intro {
        .open-sans-light();
        .font-size(20px);
        margin-bottom: @baseLine*3;
    }

    .tip-title {
        .span(9);
        .font-size(48px);
        color: #c33b32;
        margin-bottom: @baseLine;
    }

    .tip-column {
        .span(8);
        margin-bottom: @baseLine*4;
    }

    aside {
        .span(3);
        .offset(1);
        margin-bottom: @baseLine*4;

        .quote {
            position: relative;
            color: @privacyGreen;
            font-style: italic;
            margin-bottom: 5px;
            .open-sans-light();
            .font-size(22px);

            &:before,
            &:after {
                content: "“";
                font-family: sans-serif;
            }

            &:before {
                position: absolute;
                top: 0;
                left: -.5em;
            }

            &:after {
                content: "”";
            }
        }

        .attribute {
            color: @textColorLight;
        }
    }

    h4 {
        color: #c33b32;
        margin-bottom: @baseLine;
        .font-size(27px);
    }

    h5 {
        .open-sans();
        text-transform: uppercase;
    }

    .footnote {
        color: @textColorLight;
        font-style: italic;
    }
}


/* 1. ASK section */

.charts {
    margin-left: -(@gridGutterWidth / 2);
    margin-right: -(@gridGutterWidth / 2);
    padding-bottom: @baseLine;
    .clearfix();

    .chart {
        .span(4);
    }

    .percentage {
        display: block;
        margin: 0 auto @baseLine/2 auto;
        height: 140px;
        width: 140px;
        background: url(/media/img/privacy/you/charts.png) no-repeat 0 0;
        color: #00af84;
        line-height: 140px;
        letter-spacing: -0.02em;
        text-align: center;
        .open-sans-light;
        .font-size(62px);

        sup {
            .font-size(24px);
        }

    }
    .chart2 .percentage {
        background-position: 0 -140px;
    }
    p {
        margin: @baseLine;
    }
}


/* 2. LEARN section */

.greenwald {
    position: relative;
    margin-bottom: @baseLine*2;
    text-align: center;

    img {
        border-radius: 6px;
        width: 100%;
    }

    figcaption {
        position: absolute;
        top: 50%;
        width: 100%;
        margin-top: -1.5em;
        text-align: center;
        span {
            padding: (@baseLine / 2) @baseLine;
            background: @localBlue;
            color: #fff;
            .border-radius();
        }
    }

    a:hover,
    a:active {
        span {
            background: @localBlueDark;
        }
    }
}

.lightbeam {
    padding-left: 160px;
    background: transparent url(/media/img/privacy/you/lightbeam.png) 0 10px no-repeat;
    margin-bottom: @baseLine*2;
}


/* 3. ACT section */

.features-list {
    margin: @baseLine*2 auto @baseLine*3;
    padding: 0;

    > li {
        list-style-type: none;
        margin-bottom: @baseLine/2;

        > a {
            display: block;
            position: relative;
            padding: @baseLine/2 0 @baseLine/2 160px;
            min-height: 132px;
            color: @textColorSecondary;

            &:hover,
            &:active {
                text-decoration: none;

                h5 {
                    text-decoration: underline;
                }
            }

            &:before {
                content: ' ';
                position: absolute;
                top: 0;
                left: 0;
                display: block;
                height: 120px;
                width: 140px;
                .at2x('/media/img/privacy/you/features-logos.png', 140px, 480px);
                background-repeat: no-repeat;
                background-position: 0 0;
            }
        }

        &.feature-forget  > a:before { background-position: 0 -120px; }
        &.feature-ddg     > a:before { background-position: 0 -240px; }
        &.feature-add-ons > a:before { background-position: 0 -360px; }
    }

    h5 {
        .trailing-arrow();
        color: @linkBlue;
    }
}

.stay-safe-online {
    margin: @baseLine auto;
    padding: 0;
    .clearfix();

    > li {
        list-style-type: none;
        width: 25%;
        margin: 0;
        padding: 0;
        float: left;
        text-align: center;

        > a {
            display: block;
            position: relative;
            padding: 0 2px 10px;
            .trailing-arrow();

            &:before {
                content: ' ';
                display: block;
                height: 80px;
                width: 80px;
                margin: 0 auto;
                .at2x('/media/img/privacy/you/safe-icons.png', 240px, 80px);
                background-repeat: no-repeat;
                background-position: 0 0;
            }
        }

        &.safe-social  > a:before { background-position: -80px 0; }
        &.safe-privacy > a:before { background-position: -160px 0; }
    }

    h5 {
        .trailing-arrow();
        color: @linkBlue;
    }
}
/* ... */

